<resources>
    <string name="app_name">LCO_Home_Workout</string>
    <string name="string_register_email">register email</string>
    <string name="string_signin">sign in</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="lco_content_description">LCO Home Workout YouTube Client</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">sign out</string>
    <string name="email_hint">email</string>
    <string name="default_duration">45  seconds</string>
    <string name="default_workout">Default Workout</string>

    <string name="welcome_message">Hello, %1$s! Today\'s workout will take about %2$d minutes. Good luck!</string>
    <string name="finish_message">Good work %1$s</string>

    <string-array name="workouts">
        <item>push ups</item>
        <item>abdomen stretch</item>
        <item>barbell incline</item>
        <item>bench press</item>
        <item>declined crunches</item>
        <item>curls</item>
        <item>dumbbell planks</item>
        <item>hindu stretch</item>
        <item>leg stretch</item>
        <item>rows</item>
        <item>sit ups</item>
        <item>triceps press</item>
        <item>v stretch</item>
        <item>yoga ball raise</item>
    </string-array>

</resources>
