<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/username_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/username_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:backgroundTint="@android:color/holo_purple"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:text="@string/username"
        android:textColor="@android:color/holo_purple"
        app:layout_constraintBottom_toTopOf="@+id/password_text"
        app:layout_constraintEnd_toEndOf="@+id/google_sign_in_button"
        app:layout_constraintStart_toStartOf="@+id/google_sign_in_button" />

    <EditText
        android:id="@+id/password_text"
        style="@android:style/Widget.Holo.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:backgroundTint="@android:color/holo_purple"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/holo_purple"
        android:textColorHint="@android:color/holo_purple"
        app:layout_constraintBottom_toTopOf="@+id/signin_text"
        app:layout_constraintEnd_toEndOf="@+id/username_text"
        app:layout_constraintStart_toStartOf="@+id/username_text" />

    <Button
        android:id="@+id/signin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@android:color/transparent"
        android:text="@string/string_signin"
        android:textColor="@android:color/holo_purple"
        app:layout_constraintBottom_toTopOf="@+id/button_create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_create_account"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_register_email"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:contentDescription="@string/lco_content_description"
        app:layout_constraintBottom_toTopOf="@+id/google_sign_in_button"
        app:layout_constraintEnd_toEndOf="@+id/google_sign_in_button"
        app:layout_constraintStart_toStartOf="@+id/google_sign_in_button"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/lco_home_workout" />

</androidx.constraintlayout.widget.ConstraintLayout>

