<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardMaxElevation="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="0dp">

            <ImageView
                android:id="@+id/image_workout"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/lco_content_description"
                app:srcCompat="@drawable/pushups" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/text_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_duration"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/holo_purple" />

                <TextView
                    android:id="@+id/text_exercise_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:text="@string/default_workout"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/holo_purple" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>

